--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
 
 .grid-container {
   display: grid;
-  width: 100vh;
-  height: 100vh;
+  width: 500px;
+  height: 500px;
 }
 
 .cell {
@@ -27,4 +27,12 @@ body {
   align-self: center;
   align-items: center;
   flex-direction: column;
+}
+
+.slideContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
