--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;1,700&family=Rubik+Burned&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+ }
 body {
   margin: 0;
   display: flex;
@@ -19,11 +24,13 @@ body {
   display: flex;
   justify-content: center;
   color: gold;
+  font-weight: 800;
 }
 
 .wrapper {
   display: flex;
   width: 100%;
+  height: 100vh;
   align-self: center;
   align-items: center;
   justify-content: space-evenly;
@@ -40,7 +47,8 @@ body {
 .userControls {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 30px;
+  justify-content: space-around;
 }
 
 .gridWrapper {
