--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 .title {
   display: flex;
   justify-content: center;
-  color: gold;
+  color: hotpink;
   font-size: 3em;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: black;
@@ -43,7 +43,8 @@ body {
   width: 100%;
   align-self: center;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 5%;
 }
 
 .slideContainer {
@@ -67,18 +68,9 @@ body {
 }
 
 .resetBtn, .eraserBtn, .rainbowBtn, .colorBtn {
-  background-color: cyan;
+  background-color: white;
   color: black;
   font-size: 1em;
-}
-
-/* #rainbowBtn { */
-  /* background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet); */
-/* } */
-
-.resetBtn.active, .eraserBtn.active, .rainbowBtn.active, .colorBtn.active {
-  background-color: black;
-  color: white;
 }
 
 #myRange {
@@ -99,12 +91,13 @@ body {
   appearance: none;
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background: black; /* Green background */
+  background: hotpink; /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
+
 #colorPicker {
-   -webkit-appearance: none;
    width: 100%;
    height: 40px;
    border: none;
-}
+ }
+
